examples/test/testpolicy12655.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12655
  namespace: namespace11
spec:
  podSelector:
    matchLabels:
      key9: value4
      key36: value2
      key18: value37
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key42: value45
          key1: value8
          key5: value49
      podSelector:
        matchLabels:
          key17: value7
